fixed overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,7 +46,6 @@ select {
 
 .page {
     position: relative;
-    min-width: 940px;
     width: 940px;
 }
 
